#pragma once

class Validator {};
